[package]
name = "tcg-cards-console-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tcg_cards_console_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Enable SHA-256 assembly fast paths because source preparation spends a large share of local CPU
# time in hashing normalized XML and incrementally hashing NDJSON chunks.
sha2 = { version = "0.10", features = ["asm"] }
quick-xml = "0.38.4"
flate2 = "1"
tokio = { version = "1", features = ["time"] }
sea-orm = { version = "1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
